tests/snapshots/account_guardians_api_test__can_retrieve_all_guardians_for_an_account.snap
---
source: tests/account_guardians_api_test.rs
expression: json_response
---
status: Success
payload:
  Success:
    guardians:
      - id: "[uuid]"
        email: guardian@example.com
        wallet_address: guardian@example.com
        status: AVAILABLE

