tests/snapshots/account_guardians_api_test__can_retrieve_all_guardians_for_an_account_filter_by_status.snap
---
source: tests/account_guardians_api_test.rs
expression: json_response
---
status: Success
payload:
  Success:
    guardians:
      - id: "[uuid]"
        email: guardian2@example.com
        wallet_address: guardian2@example.com
        status: ACTIVE

