tests/snapshots/account_guardians_api_test__error_when_remove_an_active_guardian_from_an_account-2.snap
---
source: tests/account_guardians_api_test.rs
expression: json_response
---
status: Success
payload:
  Success:
    guardians:
      - id: "[uuid]"
        email: guardian1@example.com
        wallet_address: guardian1@example.com
        status: AVAILABLE
      - id: "[uuid]"
        email: guardian2@example.com
        wallet_address: guardian2@example.com
        status: ACTIVE

