tests/snapshots/account_guardians_api_test__error_when_remove_an_active_guardian_from_an_account.snap
---
source: tests/account_guardians_api_test.rs
expression: delete_res.text().await
---
"{\"status\":\"Error\",\"payload\":{\"Error\":{\"error_message\":\"Guardian must not be ACTIVE\"}}}"

